--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/image-header-desktop.jpg">
   
-  <title>Frontend Mentor | Stats preview card component</title>
+  <title>Ahmed Sabbah | Stats preview card component</title>
   <!-- BOOTSTRAP CSS FILE -->
   <link rel="stylesheet" href="./css/main.min.css">
 
@@ -23,7 +23,8 @@
       <!-- CARD -->
       <div class="my-card my-3 overflow-hidden mx-auto bg-cardBackground rounded row row-cols-1 row-cols-md-2 flex-row-reverse">
         <!-- IMAGE -->
-        <div class="image p-0">
+        <div class="image p-0 position-relative">
+          <div class="position-absolute top-0 start-0 w-100 h-100 bg-softViolet opacity-50"></div>
           <img class="w-100 h-100 d-none d-md-block" src="./images/image-header-desktop.jpg" alt="image-header-desktop">
           <img class="w-100 h-100 d-md-none" src="./images/image-header-mobile.jpg" alt="image-header-mobile">
         </div>
