--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; margin-top: 2rem; color: white; }
+    .attribution { font-size: 11px; text-align: center; color: white; }
     .attribution a { color: hsl(199, 45%, 44%); }
   </style>
 </head>
@@ -21,7 +21,7 @@
     <div class="mx-3 mx-lg-0">
       
       <!-- CARD -->
-      <div class="my-card my-3 overflow-hidden mx-auto bg-cardBackground rounded row row-cols-1 row-cols-md-2 flex-row-reverse">
+      <div class="my-card  mb-3 mx-auto bg-cardBackground rounded row row-cols-1 row-cols-md-2 flex-row-reverse">
         <!-- IMAGE -->
         <div class="image p-0 position-relative">
           <div class="position-absolute top-0 start-0 w-100 h-100 bg-softViolet opacity-50"></div>
@@ -33,18 +33,18 @@
           <!-- CONTENT -->
           <div class="text-center text-md-start p-3 p-md-5">
 
-            <h1 class="text-statHeading fw-bold">
+            <h1 class="text-statHeading fw-bold mb-4">
               Get <span class="text-softViolet">insights</span> that help your business grow.
             </h1>
 
-            <p class="text-mainParagraph">
+            <p class="text-mainParagraph mb-5">
               Discover the benefits of data analytics and make better decisions regarding revenue, customer 
               experience, and overall efficiency.
             </p>
 
-            <div class="d-md-flex gap-5 d-block">
+            <div class="d-md-flex gap-5 d-block mt-4">
 
-              <div class="text-center">
+              <div class="text-center text-md-start">
 
                 <h2 class="text-statHeading fw-bold">
                   10k+
@@ -54,7 +54,7 @@
 
               </div>
 
-              <div class="text-center">
+              <div class="text-center text-md-start">
 
                 <h2 class="text-statHeading fw-bold">
                   314
@@ -64,7 +64,7 @@
 
               </div>
 
-              <div class="text-center">
+              <div class="text-center text-md-start">
 
                 <h2 class="text-statHeading fw-bold">
                   12M+
