adding overflow hidden to card

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="mx-3 mx-lg-0">
       
       <!-- CARD -->
-      <div class="my-card  mb-3 mx-auto bg-cardBackground rounded row row-cols-1 row-cols-md-2 flex-row-reverse">
+      <div class="my-card overflow-hidden mb-3 mx-auto bg-cardBackground rounded row row-cols-1 row-cols-md-2 flex-row-reverse">
         <!-- IMAGE -->
         <div class="image p-0 position-relative">
           <div class="position-absolute top-0 start-0 w-100 h-100 bg-softViolet opacity-50"></div>
